--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "Put the session-id here.",
+      "description": "𝙰𝚂𝙸𝚃𝙷𝙰-𝙼𝙳=lM4AmZyB#Uoeh-xRgpLr0EWuzxhnSck8l-7iGOqhjCa_HE3mBuKs",
       "required": true
     }
 },
